# cppi-man-backend

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
core/: admin.py
core/models/: __init__.py  auxilio.py  bolsista.py  discente.py  edital.py  externo.py  projeto.py  servidor.py
core/serializers/: __init__.py  auxilio.py  bolsista.py  discente.py  edital.py  externo.py  projeto.py  servidor.py
core/views/: __init__.py  auxilio.py  bolsista.py  discente.py  edital.py  externo.py  projeto.py  servidor.py
cppi_man_backend/: asgi.py  settings.py  urls.py  wsgi.py
utils/: post_data.py
